refactor: process refactor suggestions